# ATL11

./: environment.yml  pyproject.toml  setup.py
ATL11/: ATL06_filters.py  ATL06_pair.py  __init__.py  data.py  get_xover_data.py  h5util.py  misc.py  point.py  poly_ref_surf.py  read_ATL06_data.py  version.py  write_METADATA.py
ATL11/ATL11xo/: data.py
ATL11/package_data/: ATL11_output_attrs.csv  ATL11xo_output_attrs.csv  atl11xo_template.h5  xy_biases_rel007_c1_28_plateau__0_800km_3day_2025-09-12.csv  xy_biases_rel007_c1_28_plateau__0_800km_3day_2025-11-17.csv  xy_biases_rel007_c1_29_plateau__0_800km_3day_2026-01-14.csv
ATL11/scripts/: ATL06_to_ATL11.py  ATL11_browse_plots.py  ATL11xo_browse_plots.py  geoloc_biases_from_xovers.py  make_ATL11_SMB_tiles.py  make_ATL11_queue_script_dis.py  make_ATL11xo_tiles.py
scripts/: ATL06_to_ATL11.py  make_ATL06_file_indexing_discover.sh  make_ATL06_tiles_discover.sh  run_all_l3b_is.sh
